# voiceagent

./: .gitignore  README.md  loan_servicing.db  pyproject.toml
docs/: fraud.md  identity_compliance.md  late_payment_policies.md  pricing_policies.md  tariffs.md  underwriting_policies.md
src/: app.py  audio_handler.py  audio_input_service.py  audio_transcribe.py  chatwithai.py  gemini_client.py  llm_service.py  main.py  response_handler.py  speech_service.py  transcription_service.py  tts_handlers.py
